<resources>
    <string name="app_name">Teclado Sensível</string>

    <string name="systemKeyboardLabel">Teclado do Sistema</string>
    <string name="systemNumber">Teclado Numérico</string>
    <string name="systemNumberDecimal">Teclado Numérico Decimal</string>
    <string name="systemQwerty">Teclado QWERTY</string>

    <string name="customKeyboardLabel">Teclado Sensível</string>
    <string name="customKeyboardAndFieldsLabel">Interatividade</string>
    <string name="customNumber">Teclado Numérico</string>
    <string name="customNumberDecimal">Teclado Numérico Decimal</string>
    <string name="customQwerty">Teclado Sensível</string>

    <string name="toMainButtonText">Mudar para Teclado do Sistema</string>
    <string name="toAdvancedButtonText">Mudar para Teclado Sensível</string>
</resources>