<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="644dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="87dp">

        <LinearLayout
            android:id="@+id/testLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="300dp">

            <!-- TECLADOS DO SISTEMA -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/labelMargin"
                android:text="@string/systemKeyboardLabel"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/labelTextSize"
                android:textStyle="bold" />

            <EditText
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:autofillHints=""
                android:hint="@string/systemNumber"
                android:inputType="number"
                android:maxLength="20" />

            <EditText
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:autofillHints=""
                android:hint="@string/systemNumberDecimal"
                android:inputType="numberDecimal"
                android:maxLength="20" />

            <EditText
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:autofillHints=""
                android:hint="@string/systemQwerty"
                android:inputType="text"
                android:maxLength="50" />


            <!-- TECLADO SENSIVEL -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/labelMargin"
                android:text="@string/customKeyboardLabel"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/labelTextSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/testNumberField"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:autofillHints=""
                android:hint="@string/customNumber"
                android:inputType="number"
                android:maxLength="20" />

            <EditText
                android:id="@+id/testNumberDecimalField"
                android:layout_width="347dp"
                android:layout_height="44dp"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:autofillHints=""
                android:hint="@string/customNumberDecimal"
                android:inputType="numberDecimal"
                android:maxLength="20" />

            <EditText
                android:id="@+id/testQwertyField"
                android:layout_width="345dp"
                android:layout_height="46dp"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:autofillHints=""
                android:hint="@string/customQwerty"
                android:inputType="text"
                android:maxLength="50" />

            <!-- SWITCH ACTIVITIES BUTTON -->
            <Button
                android:id="@+id/switchActivitiesButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorAccent"
                android:text="@string/toAdvancedButtonText"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

    <com.izabela.tecladosensivel.components.keyboard.CustomKeyboardView
        android:id="@+id/customKeyboardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>